[package]
name = "wasm-typst"
version = "0.16.0"
authors = ["Soeren Wegener <wegener92@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.126"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
typst = "0.15.0"
typst-layout = "0.15.0"
typst-pdf = "0.15.0"
typst-svg = "0.15.0"
typst-render = "0.15.0"
typst-ide = "0.15.0"
comemo = "0.5.1"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[profile.release]
opt-level = "s"
